--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -287,8 +287,8 @@
                       </div>
                   </form>
                   <!-- *********************************** i frame section contact ******************************************* -->
-                  <div class="col-md-4 col-sm-11">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2621.7855340225638!2d2.0352009999999994!3d48.9194782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6893e28c620ad%3A0xdbb1ebcd3eb0dd03!2s59%20Pl.%20Corneille%2C%2078300%20Poissy!5e0!3m2!1sfr!2sfr!4v1655730461621!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <div class="col-md-4 col-sm-11 iframe">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2621.7855340225638!2d2.0352009999999994!3d48.9194782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6893e28c620ad%3A0xdbb1ebcd3eb0dd03!2s59%20Pl.%20Corneille%2C%2078300%20Poissy!5e0!3m2!1sfr!2sfr!4v1655730461621!5m2!1sfr!2sfr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
                 </div>
 
